# ukcoop.github.io

./: .eslintrc.json  Cargo.toml  index.html  package-lock.json  package.json  shell.nix  ukcoop-github-io-19d74468d3d59178.js  ukcoop-github-io-19d74468d3d59178_bg.wasm  ukcoop-github-io-527483ef056e9b0f.js  ukcoop-github-io-527483ef056e9b0f_bg.wasm  ukcoop-github-io-99c886d9f0909d44_bg.wasm  ukcoop-github-io-bb1c4dd2267ec87.js  ukcoop-github-io-bb1c4dd2267ec87_bg.wasm  ukcoop-github-io-bc48cd22a002cb9_bg.wasm  ukcoop-github-io-bd11e678062b3d89_bg.wasm  ukcoop-github-io-cc87793405758669.js  ukcoop-github-io-cc87793405758669_bg.wasm  ukcoop-github-io-d352db7a3d2438f3.js  ukcoop-github-io-d352db7a3d2438f3_bg.wasm  ukcoop-github-io-ec3d91a6050638d8_bg.wasm  ukcoop-github-io-f1826c1317002258_bg.wasm
.github/workflows/: deploy.yml
app/: layout.tsx  main.tsx  page.tsx
app/components/: hero.tsx  link.tsx  miniTechBox.tsx  navbar.tsx  project.tsx  sketch.tsx  techBox.tsx
app/json/: info.json  projects.json
app/pageComponents/: About.tsx  Home.tsx
json/: projects.json
src/: main.rs  shared.rs
src/components/: link.rs  mod.rs
src/components/portfolio/: project.rs
src/components/sections/: hero.rs  mod.rs  nav_bar.rs  sketch.rs
src/core/: fetch_projects.rs  mod.rs
src/pages/: about.rs  home.rs  mod.rs  not_found.rs  portfolio.rs  writing.rs
static/json/: projects.json
