[package]
name = "ukcoop-github-io"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.50"

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"
